--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 <input type="radio" name="radio" id="radioY">
                 <input type="radio" name="radio" id="radioN">
             </div>
+
+            <div>
+                <label for="NetY">Yes/No</label>
+                <input type="Net" name="Net" id="NetY">
+                <input type="Net" name="Net" id="NetN">
+            </div>
         </form>
+
     </body>
 </html>
