--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -8,7 +8,54 @@
    
     
     <body>
-        <h1>Hello</h1>
-        <p> Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello </p>
+       <div class="container">
+            <div class="box-1">
+                <h1>Hello</h1>
+                <p> Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello </p>
+            </div>
+            <div class="box-2">
+                <h1>goodbye</h1>
+                <p>Bye bye bye bye bye bye</p>
+            </div>
+
+            <div class="catagories">
+                <h2>Catagories</h2>
+                <ul>
+                    <li><a href="#">Catagory 1</a></li>
+                </ul>
+
+                <h2>Catagories</h2>
+                <ul>
+                    <li><a href="#">Catagory 1</a></li>
+                </ul>
+
+                <h2>Catagories</h2>
+                <ul>
+                    <li><a href="#">Catagory 1</a></li>
+                </ul>
+
+                <h2>Catagories</h2>
+                <ul>
+                    <li><a href="#">Catagory 1</a></li>
+                </ul>
+
+
+            </div>
+
+            <form class="my-form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id=name>
+            </div>
+
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id=name>
+            </div>
+            </form>
+       </div><!--container-->
+
+       <div style="margin-top: 500px;"></div>
+       
     </body>
 </html>
