Cheat sheets(video 2)

--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -12,6 +12,7 @@
             <div class="box-1">
                 <h1>Hello</h1>
                 <p> Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello </p>
+                <a href="button">Read more</a>
             </div>
             <div class="box-2">
                 <h1>goodbye</h1>
@@ -52,8 +53,76 @@
                 <label for="name">Name</label>
                 <input type="text" name="name" id=name>
             </div>
+
+            <input class="button" type="submit" value="Submit" name="">
+
             </form>
+
+            <div class="block">
+                <h1>Heading</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla repellendus enim nostrum.
+                </p>
+
+            </div>
+
+            <div class="block">
+                <h1>Heading</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla repellendus enim nostrum.
+                </p>
+
+            </div>
+
+            <div class="block">
+                <h1>Heading</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla repellendus enim nostrum.
+                </p>
+
+            </div>
+
+            <div class="clr"></div>
+
+            <div id="main-block">
+                <h1>Heading</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla repellendus enim nostrum.
+                </p>
+            </div>
+
+            <div id="sidebar">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla repellendus enim nostrum.
+                </p>
+            </div>
+
+            <div class="clr"></div>
+
+            <div class="p-box">
+                <h1>Hello</h1>
+                <h2>goodbye</h2>
+            </div>
+
+            <ul class="my-list">
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+            </ul>
+
        </div><!--container-->
+
+       <a class="fix-me button" href="">hello</a>
 
        <div style="margin-top: 500px;"></div>
        
