--- a/biggerproject/home.html
+++ b/biggerproject/home.html
@@ -10,12 +10,16 @@
 <body>
     <!--Header Showcase-->
     <header id="showcase" class="grid">
+        <div></div>
         <div class="backgroundimg">
-            <h1>Yeditepe</h1>
-            <h3>Yeditepe Geleceyini Sekiler</h3>
             <a href="basvuru.html" class="btn">Basvuru</a>
         </div>
         <div class="logoimg"></div>
+
+        <div class="menu-btn">
+            <div class="menu-btn__burger"></div>
+        </div>
+        <script src="main.js"></script>
 
     </header>
 
