Finished product(I couldn't do some of the things on seperate pages so I just put some text and links to the actual page when needed) I hope this is ok and isn't a complete faliure!

--- a/redoOfFirstBigProject/programs.html
+++ b/redoOfFirstBigProject/programs.html
@@ -19,7 +19,7 @@
                 <li><a href="/redoOfFirstBigProject/home.html">Home</a></li>
                 <li><a href="/redoOfFirstBigProject/application.html">Application Process</a></li>
                 <li><a href="/redoOfFirstBigProject/onlinepayments.html">Online payments</a></li>
-                <li><a href="/biggerproject/schedule.html">Schedule</a></li>
+                <li><a href="/redoOfFirstBigProject/schedule.html">Schedule</a></li>
                 <li><a href="/redoOfFirstBigProject/studentcenter.html">Student Center</a></li>
                 <li><a href="/redoOfFirstBigProject/programs.html">A-Z Programs</a></li>
                 <li><a href="/redoOfFirstBigProject/obs.html">OBS</a></li>
@@ -35,19 +35,25 @@
         <script src="apps.js"></script>
     </header>
 
+    <section id="programs">
+        <div class="container">
+            <h4>We are currently adding new courses... To view the current ones please <a href="https://yeditepe.edu.tr/tr/a-z-programlar">click here.</a></h4>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">    
             <div class="row">
                 <div class="footer-column">
                     <h3>Socials</h3>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-podcast"></i></a>
-                        <a href="#"><i class="fab fa-askfm"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/yeditepeuniversitesi"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/yeditepeuni"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/school/yeditepeuni/"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/yeditepeuniversitesi/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://yeditepe.edu.tr/tr/podcast"><i class="fab fa-podcast"></i></a>
+                        <a href="https://ask.fm/YeditepeUniversitesi"><i class="fab fa-askfm"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsymrI5NRE6zUKOI5I07KGw"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
 
@@ -61,6 +67,12 @@
                 
                         </form>    
                         
+                    </div>
+                </div>
+
+                <div class="footer-column">
+                    <div class="copy-write"> 
+                        <h2 class="copy">&copy; Yeditepe University 2022</h2>
                     </div>
                 </div>
             </div>
