--- a/redoOfFirstBigProject/home.html
+++ b/redoOfFirstBigProject/home.html
@@ -17,12 +17,12 @@
 
             <ul class="nav-bar">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Application Process</a></li>
+                <li><a href="/redoOfFirstBigProject/application.html">Application Process</a></li>
                 <li><a href="/redoOfFirstBigProject/onlinepayments.html">Online payments</a></li>
-                <li><a href="#">Schedule</a></li>
-                <li><a href="#">Student Center</a></li>
-                <li><a href="#">A-Z Programs</a></li>
-                <li><a href="#">OBS</a></li>
+                <li><a href="/redoOfFirstBigProject/schedule.html">Schedule</a></li>
+                <li><a href="/redoOfFirstBigProject/studentcenter.html">Student Center</a></li>
+                <li><a href="/redoOfFirstBigProject/programs.html">A-Z Programs</a></li>
+                <li><a href="/redoOfFirstBigProject/obs.html">OBS</a></li>
             </ul>
 
             <div class="bmenu">
@@ -59,13 +59,13 @@
                 <div class="footer-column">
                     <h3>Socials</h3>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-podcast"></i></a>
-                        <a href="#"><i class="fab fa-askfm"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/yeditepeuniversitesi"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/yeditepeuni"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/school/yeditepeuni/"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/yeditepeuniversitesi/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://yeditepe.edu.tr/tr/podcast"><i class="fab fa-podcast"></i></a>
+                        <a href="https://ask.fm/YeditepeUniversitesi"><i class="fab fa-askfm"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsymrI5NRE6zUKOI5I07KGw"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
 
@@ -79,6 +79,12 @@
                 
                         </form>    
                         
+                    </div>
+                </div>
+
+                <div class="footer-column">
+                    <div class="copy-write"> 
+                        <h2 class="copy">&copy; Yeditepe University 2022</h2>
                     </div>
                 </div>
             </div>
