--- a/redoOfFirstBigProject/studentcenter.html
+++ b/redoOfFirstBigProject/studentcenter.html
@@ -19,7 +19,7 @@
                 <li><a href="/redoOfFirstBigProject/home.html">Home</a></li>
                 <li><a href="/redoOfFirstBigProject/application.html">Application Process</a></li>
                 <li><a href="/redoOfFirstBigProject/onlinepayments.html">Online payments</a></li>
-                <li><a href="/biggerproject/schedule.html">Schedule</a></li>
+                <li><a href="/redoOfFirstBigProject/schedule.html">Schedule</a></li>
                 <li><a href="/redoOfFirstBigProject/studentcenter.html">Student Center</a></li>
                 <li><a href="/redoOfFirstBigProject/programs.html">A-Z Programs</a></li>
                 <li><a href="/redoOfFirstBigProject/obs.html">OBS</a></li>
@@ -35,19 +35,104 @@
         <script src="apps.js"></script>
     </header>
 
+    <section id="studentcenter">
+        <div class="container">
+            <h4>
+                Student center
+            </h4>
+
+            <p>
+                We support the individual and academic development of our students by enriching their university experience. Taking its power from science; We accompany them on their adventure of gaining all the competencies they need in order to graduate as individuals who are creative, productive, curious to explore, and leave a 'mark' with a sense of responsibility and contribution to society. In close cooperation with all our stakeholders; We offer opportunities to develop their potential by contributing to their recognition and understanding of life.
+            </p>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/bireysel-ve-akademik-gelisim" class="btn">Individual and academic growth</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/kariyer-gelisim" class="btn">Career development</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/mezunlarla-iletisim" class="btn">Communication with alumni</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/kultur-ve-sanat" class="btn">Culture and Art</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/ogrenci-kulupleri" class="btn">Student Clubs</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/psikolojik-danisma-ve-rehberlik-birimi" class="btn">Physcological counseling and guidance unit</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/saglikli-beslenme" class="btn">Healthy eating</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/spor-yonetimi" class="btn">Sports management</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="studentcenterlinks">
+        <div class="container">
+            <ul class="apl">
+                <li><a href="https://ogrencimerkezi.yeditepe.edu.tr/ogrenci-konseyi" class="btn">Student council</a></li>
+            </ul>
+        </div>
+    </section>
+
+
     <footer class="footer">
         <div class="container">    
             <div class="row">
                 <div class="footer-column">
                     <h3>Socials</h3>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-podcast"></i></a>
-                        <a href="#"><i class="fab fa-askfm"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/yeditepeuniversitesi"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/yeditepeuni"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/school/yeditepeuni/"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/yeditepeuniversitesi/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://yeditepe.edu.tr/tr/podcast"><i class="fab fa-podcast"></i></a>
+                        <a href="https://ask.fm/YeditepeUniversitesi"><i class="fab fa-askfm"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsymrI5NRE6zUKOI5I07KGw"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
 
@@ -61,6 +146,12 @@
                 
                         </form>    
                         
+                    </div>
+                </div>
+
+                <div class="footer-column">
+                    <div class="copy-write"> 
+                        <h2 class="copy">&copy; Yeditepe University 2022</h2>
                     </div>
                 </div>
             </div>
